--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SoftMintApp"
+        android:theme="@style/Theme.SoftMint"
         tools:targetApi="31">
         <activity
             android:name=".EditItem"
