--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SoftMint"
         tools:targetApi="31">
         <activity
+            android:name=".EditCity"
+            android:exported="false" />
+        <activity
+            android:name=".Cities_alert_dialog"
+            android:exported="false" />
+        <activity
+            android:name=".AddCity"
+            android:exported="false" />
+        <activity
             android:name=".EditItem"
             android:exported="false" />
         <activity
