--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SoftMint"
         tools:targetApi="31">
         <activity
+            android:name=".SelectItems"
+            android:exported="false" />
+        <activity
+            android:name=".AddSale"
+            android:exported="false" />
+        <activity
             android:name=".EditCustomer"
             android:exported="false"
             android:theme="@style/Theme.SoftMint" />
